[gd_scene load_steps=24 format=2]

[ext_resource path="res://sprites/enemyShooting/cop_standing2.png" type="Texture" id=1]
[ext_resource path="res://Weapon.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy.gd" type="Script" id=3]
[ext_resource path="res://sprites/enemyShooting/arms.png" type="Texture" id=4]
[ext_resource path="res://sprites/enemies/enemyWalk/walk3.png" type="Texture" id=5]
[ext_resource path="res://sprites/enemies/enemyWalk/walk4.png" type="Texture" id=6]
[ext_resource path="res://sprites/enemies/enemyWalk/walk1.png" type="Texture" id=7]
[ext_resource path="res://sprites/enemies/enemyWalk/walk5.png" type="Texture" id=8]
[ext_resource path="res://sprites/enemies/enemyWalk/walk2.png" type="Texture" id=9]
[ext_resource path="res://sprites/enemies/enemyWalk/walk6.png" type="Texture" id=10]
[ext_resource path="res://sprites/enemies/enemyWalk/walk7.png" type="Texture" id=11]
[ext_resource path="res://sprites/enemyHoldingGun/enemy2.png" type="Texture" id=12]
[ext_resource path="res://sprites/enemyHoldingGun/enemy3.png" type="Texture" id=13]
[ext_resource path="res://sprites/enemyHoldingGun/enemy4.png" type="Texture" id=14]
[ext_resource path="res://sprites/enemyHoldingGun/enemy7.png" type="Texture" id=15]
[ext_resource path="res://sprites/enemyHoldingGun/enemy1.png" type="Texture" id=16]
[ext_resource path="res://sprites/enemyHoldingGun/enemy5.png" type="Texture" id=17]
[ext_resource path="res://sprites/enemyHoldingGun/enemy6.png" type="Texture" id=18]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 20, 48 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "enemyWalk",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 15 ) ],
"loop": true,
"name": "EnemyHoldingGun",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "shooting",
"speed": 5.0
} ]

[sub_resource type="GDScript" id=8]
script/source = "extends Node2D





func _ready():
	pass
	
func _physics_process(delta):
	pass
	


func _on_Area2D_body_entered(body):
	#if body.name == \"Player\":
		#$Weapon.shoot()
	pass



"

[sub_resource type="CircleShape2D" id=6]
radius = 512.25

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 28, 52 )

[node name="Enemy" type="KinematicBody2D"]
collision/safe_margin = 1.0
script = ExtResource( 3 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( -1.51951, 12.695 )
shape = SubResource( 7 )

[node name="collision_detection" type="Position2D" parent="."]
position = Vector2( -1.51951, 12.695 )

[node name="ledge_left" type="RayCast2D" parent="collision_detection"]
position = Vector2( -21, 48 )
enabled = true
cast_to = Vector2( 0, 5 )

[node name="obs_right" type="RayCast2D" parent="collision_detection"]
position = Vector2( 32, -48 )
enabled = true
cast_to = Vector2( 0, 85 )

[node name="obs_left" type="RayCast2D" parent="collision_detection"]
position = Vector2( -32, -48 )
enabled = true
cast_to = Vector2( 0, 85 )

[node name="ledge_right" type="RayCast2D" parent="collision_detection"]
position = Vector2( 21, 48 )
enabled = true
cast_to = Vector2( 0, 5 )

[node name="ground" type="RayCast2D" parent="collision_detection"]
position = Vector2( -20, 49 )
enabled = true
cast_to = Vector2( 40, 0 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -9.305 )
scale = Vector2( 0.297561, 0.305011 )
frames = SubResource( 5 )
animation = "shooting"
speed_scale = 2.0
playing = true

[node name="Detection" type="Node2D" parent="."]
position = Vector2( -1.51951, 12.695 )
script = SubResource( 8 )

[node name="Area2D" type="Area2D" parent="Detection"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection/Area2D"]
shape = SubResource( 6 )

[node name="collision" type="Area2D" parent="."]
position = Vector2( -1.51951, 12.695 )

[node name="body" type="CollisionShape2D" parent="collision"]
shape = SubResource( 9 )

[node name="arms" type="Sprite" parent="."]
scale = Vector2( 0.297561, 0.305011 )
texture = ExtResource( 4 )

[node name="Weapon" parent="." instance=ExtResource( 2 )]
position = Vector2( 32.4805, 5.69501 )
scale = Vector2( 0.4, 0.4 )

[connection signal="body_shape_entered" from="Detection/Area2D" to="." method="_on_Area2D_body_shape_entered"]
[connection signal="body_shape_exited" from="Detection/Area2D" to="." method="_on_Area2D_body_shape_exited"]
[connection signal="body_shape_entered" from="collision" to="." method="_on_collision_body_shape_entered"]
